QQuickTextEdit: move QSG* members from dptr to root node.

Subclass QSGTransform node for our use case and add the frame decorations
and cursor nodes in there.

Task-number: QTBUG-31580
Change-Id: Id2b468b53092f21134ae45e5694bc54c43660f8b
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>